--- a/iOS/gongan/policeOnline/ViewControllers/GGClueReport.xib
+++ b/iOS/gongan/policeOnline/ViewControllers/GGClueReport.xib
@@ -13,6 +13,7 @@
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
 			<string>IBUIButton</string>
+			<string>IBUIImageView</string>
 			<string>IBUIScrollView</string>
 			<string>IBUITextField</string>
 			<string>IBUITextView</string>
@@ -38,17 +39,17 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIScrollView" id="268650707">
+					<object class="IBUIScrollView" id="594398745">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUITextField" id="672787604">
-								<reference key="NSNextResponder" ref="268650707"/>
+							<object class="IBUITextField" id="837000976">
+								<reference key="NSNextResponder" ref="594398745"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 20}, {280, 30}}</string>
-								<reference key="NSSuperview" ref="268650707"/>
+								<reference key="NSSuperview" ref="594398745"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="202870952"/>
+								<reference key="NSNextKeyView" ref="761233818"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -60,7 +61,7 @@
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MAA</bytes>
-									<object class="NSColorSpace" key="NSCustomColorSpace" id="527680868">
+									<object class="NSColorSpace" key="NSCustomColorSpace" id="716623606">
 										<int key="NSID">2</int>
 									</object>
 								</object>
@@ -70,23 +71,23 @@
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								</object>
 								<int key="IBUIClearButtonMode">1</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="31453210">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="1028232754">
 									<int key="type">1</int>
 									<double key="pointSize">14</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="912478906">
+								<object class="NSFont" key="IBUIFont" id="970887634">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUITextView" id="202870952">
-								<reference key="NSNextResponder" ref="268650707"/>
+							<object class="IBUITextView" id="761233818">
+								<reference key="NSNextResponder" ref="594398745"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 63}, {280, 136}}</string>
-								<reference key="NSSuperview" ref="268650707"/>
+								<reference key="NSSuperview" ref="594398745"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="48658546"/>
+								<reference key="NSNextKeyView" ref="220581696"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -100,16 +101,16 @@
 									<int key="IBUIAutocapitalizationType">2</int>
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								</object>
-								<reference key="IBUIFontDescription" ref="31453210"/>
-								<reference key="IBUIFont" ref="912478906"/>
+								<reference key="IBUIFontDescription" ref="1028232754"/>
+								<reference key="IBUIFont" ref="970887634"/>
 							</object>
-							<object class="IBUIButton" id="48658546">
-								<reference key="NSNextResponder" ref="268650707"/>
+							<object class="IBUIButton" id="220581696">
+								<reference key="NSNextResponder" ref="594398745"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{68, 206}, {183, 44}}</string>
-								<reference key="NSSuperview" ref="268650707"/>
+								<reference key="NSSuperview" ref="594398745"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="421492874"/>
+								<reference key="NSNextKeyView" ref="266634475"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -117,35 +118,35 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<int key="IBUIButtonType">1</int>
 								<string key="IBUINormalTitle">提交</string>
-								<object class="NSColor" key="IBUIHighlightedTitleColor" id="455131139">
+								<object class="NSColor" key="IBUIHighlightedTitleColor" id="8559342">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
-								<object class="NSColor" key="IBUINormalTitleColor" id="967157983">
+								<object class="NSColor" key="IBUINormalTitleColor" id="398830714">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MAA</bytes>
 								</object>
-								<object class="NSColor" key="IBUINormalTitleShadowColor" id="467349880">
+								<object class="NSColor" key="IBUINormalTitleShadowColor" id="1034923154">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="466004870">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="475195212">
 									<int key="type">2</int>
 									<double key="pointSize">15</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="863656967">
+								<object class="NSFont" key="IBUIFont" id="674797281">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIButton" id="421492874">
-								<reference key="NSNextResponder" ref="268650707"/>
+							<object class="IBUIButton" id="266634475">
+								<reference key="NSNextResponder" ref="594398745"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{68, 258}, {183, 42}}</string>
-								<reference key="NSSuperview" ref="268650707"/>
+								<reference key="NSSuperview" ref="594398745"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="146556669"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -153,17 +154,49 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<int key="IBUIButtonType">1</int>
 								<string key="IBUINormalTitle">照片</string>
-								<reference key="IBUIHighlightedTitleColor" ref="455131139"/>
-								<reference key="IBUINormalTitleColor" ref="967157983"/>
-								<reference key="IBUINormalTitleShadowColor" ref="467349880"/>
-								<reference key="IBUIFontDescription" ref="466004870"/>
-								<reference key="IBUIFont" ref="863656967"/>
+								<reference key="IBUIHighlightedTitleColor" ref="8559342"/>
+								<reference key="IBUINormalTitleColor" ref="398830714"/>
+								<reference key="IBUINormalTitleShadowColor" ref="1034923154"/>
+								<reference key="IBUIFontDescription" ref="475195212"/>
+								<reference key="IBUIFont" ref="674797281"/>
+							</object>
+							<object class="IBUIImageView" id="146556669">
+								<reference key="NSNextResponder" ref="594398745"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{109, 307}, {100, 100}}</string>
+								<reference key="NSSuperview" ref="594398745"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="781060228"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
+							<object class="IBUIButton" id="781060228">
+								<reference key="NSNextResponder" ref="594398745"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{109, 307}, {100, 101}}</string>
+								<reference key="NSSuperview" ref="594398745"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<reference key="IBUIHighlightedTitleColor" ref="8559342"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+								</object>
+								<reference key="IBUINormalTitleShadowColor" ref="1034923154"/>
+								<reference key="IBUIFontDescription" ref="475195212"/>
+								<reference key="IBUIFont" ref="674797281"/>
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 455}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="672787604"/>
+						<reference key="NSNextKeyView" ref="837000976"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -174,11 +207,11 @@
 				<string key="NSFrame">{{0, 64}, {320, 455}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="268650707"/>
+				<reference key="NSNextKeyView" ref="594398745"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="527680868"/>
+					<reference key="NSCustomColorSpace" ref="716623606"/>
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUISimulatedNavigationBarMetrics" key="IBUISimulatedTopBarMetrics">
@@ -217,8 +250,24 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">btnCaptured</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="781060228"/>
+					</object>
+					<int key="connectionID">20</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">ivCaptured</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="146556669"/>
+					</object>
+					<int key="connectionID">21</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="672787604"/>
+						<reference key="source" ref="837000976"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">11</int>
@@ -226,7 +275,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="202870952"/>
+						<reference key="source" ref="761233818"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">12</int>
@@ -234,7 +283,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">submit:</string>
-						<reference key="source" ref="48658546"/>
+						<reference key="source" ref="220581696"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -243,7 +292,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">addPicture:</string>
-						<reference key="source" ref="421492874"/>
+						<reference key="source" ref="266634475"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -252,10 +301,19 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="268650707"/>
+						<reference key="source" ref="594398745"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">10</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">addPicture:</string>
+						<reference key="source" ref="781060228"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">18</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -270,7 +328,7 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="268650707"/>
+							<reference ref="594398745"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -287,34 +345,48 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">9</int>
-						<reference key="object" ref="268650707"/>
+						<reference key="object" ref="594398745"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="672787604"/>
-							<reference ref="202870952"/>
-							<reference ref="48658546"/>
-							<reference ref="421492874"/>
+							<reference ref="837000976"/>
+							<reference ref="761233818"/>
+							<reference ref="220581696"/>
+							<reference ref="266634475"/>
+							<reference ref="146556669"/>
+							<reference ref="781060228"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="672787604"/>
-						<reference key="parent" ref="268650707"/>
+						<reference key="object" ref="837000976"/>
+						<reference key="parent" ref="594398745"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="202870952"/>
-						<reference key="parent" ref="268650707"/>
+						<reference key="object" ref="761233818"/>
+						<reference key="parent" ref="594398745"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">7</int>
-						<reference key="object" ref="48658546"/>
-						<reference key="parent" ref="268650707"/>
+						<reference key="object" ref="220581696"/>
+						<reference key="parent" ref="594398745"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="421492874"/>
-						<reference key="parent" ref="268650707"/>
+						<reference key="object" ref="266634475"/>
+						<reference key="parent" ref="594398745"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">15</int>
+						<reference key="object" ref="146556669"/>
+						<reference key="parent" ref="594398745"/>
+						<string key="objectName">ivCaptured</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">17</int>
+						<reference key="object" ref="781060228"/>
+						<reference key="parent" ref="594398745"/>
+						<string key="objectName">btnCaptured</string>
 					</object>
 				</array>
 			</object>
@@ -324,6 +396,8 @@
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="17.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -334,7 +408,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">14</int>
+			<int key="maxID">21</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -361,6 +435,20 @@
 						<object class="IBActionInfo" key="submit:">
 							<string key="name">submit:</string>
 							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="btnCaptured">UIButton</string>
+						<string key="ivCaptured">UIImageView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="btnCaptured">
+							<string key="name">btnCaptured</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="ivCaptured">
+							<string key="name">ivCaptured</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
