上传的联调
上传的联调

--- a/iOS/gongan/policeOnline/ViewControllers/GGLeftDrawerVC.xib
+++ b/iOS/gongan/policeOnline/ViewControllers/GGLeftDrawerVC.xib
@@ -73,7 +73,7 @@
 					</object>
 					<object class="IBUIButton" id="30203398">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{20, 93}, {162, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
